[CORRECTION] Augmente z-index du menu mobile
... Afin de bien passer au dessus des éléments de la page en dessous. Dans la page /niveaux-maturite en mobile, les sélecteurs de niveaux de maturité se retrouvaient au dessus du contenu du menu mobile.

--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -223,7 +223,7 @@ header {
     display: flex;
     flex-direction: column;
     position: fixed;
-    z-index: 10;
+    z-index: 11;
     background: white;
     width: calc(100% - 32px);
     padding: 16px;
